docs/api/qiskit/0.19/ibmq_job.mdx
---
title: job (v0.19)
description: API reference for qiskit.providers.ibmq.job in qiskit v0.19
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.providers.ibmq.job
---

<span id="module-qiskit.providers.ibmq.job" />

<span id="qiskit-providers-ibmq-job" />

<span id="job-qiskit-providers-ibmq-job" />

# Job

`qiskit.providers.ibmq.job`

Modules representing IBM Quantum Experience jobs.

## Classes

|                                                                                                                              |                                                                             |
| ---------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------- |
| [`IBMQJob`](qiskit.providers.ibmq.job.IBMQJob "qiskit.providers.ibmq.job.IBMQJob")(backend, api, job\_id, creation\_date, …) | Representation of a job that executes on an IBM Quantum Experience backend. |
| [`QueueInfo`](qiskit.providers.ibmq.job.QueueInfo "qiskit.providers.ibmq.job.QueueInfo")(\[position, status, …])             | Queue information for a job.                                                |

## Functions

|                                                                                                                          |                                              |
| ------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------- |
| [`job_monitor`](qiskit.providers.ibmq.job.job_monitor "qiskit.providers.ibmq.job.job_monitor")(job\[, interval, output]) | Monitor the status of an `IBMQJob` instance. |

## Exception

|                                                                                                                                                  |                                                                     |
| ------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------- |
| [`IBMQJobError`](qiskit.providers.ibmq.job.IBMQJobError "qiskit.providers.ibmq.job.IBMQJobError")(\*message)                                     | Base class for errors raised by the job modules.                    |
| [`IBMQJobApiError`](qiskit.providers.ibmq.job.IBMQJobApiError "qiskit.providers.ibmq.job.IBMQJobApiError")(\*message)                            | Errors that occur unexpectedly when querying the server.            |
| [`IBMQJobFailureError`](qiskit.providers.ibmq.job.IBMQJobFailureError "qiskit.providers.ibmq.job.IBMQJobFailureError")(\*message)                | Errors raised when a job failed.                                    |
| [`IBMQJobInvalidStateError`](qiskit.providers.ibmq.job.IBMQJobInvalidStateError "qiskit.providers.ibmq.job.IBMQJobInvalidStateError")(\*message) | Errors raised when a job is not in a valid state for the operation. |
| [`IBMQJobTimeoutError`](qiskit.providers.ibmq.job.IBMQJobTimeoutError "qiskit.providers.ibmq.job.IBMQJobTimeoutError")(\*message)                | Errors raised when a job operation times out.                       |

